--- a/output.tex
+++ b/output.tex
@@ -1,1 +1,1 @@
-\documentclass{article}\usepackage[utf8]{inputenc}\begin{document}\section{Introduction}\[ (/lim_{x/to10}{{\left(4*5\right)}}) \]\end{document}
+\documentclass{article}\usepackage[utf8]{inputenc}\begin{document}\section{Introduction}\[ \lim_{{x}\to {10}}{{\left({x}+{5}\right)}} = {\left({x}+{5}\right)} \]\end{document}
