--- a/output.tex
+++ b/output.tex
@@ -1,1 +1,1 @@
-\documentclass{article}\usepackage[utf8]{inputenc}\begin{document}\section{Introduction}\[ {\left({7}-{2}\right)} \]\[ {{5}^{{2}}} \]\end{document}
+\documentclass{article}\usepackage[utf8]{inputenc}\begin{document}\section{Introduction}\[ {a} \]\end{document}
